# datamasters-mlops-case

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  feature_registry.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
infra/: .env.example  docker-compose.yaml  postgres_init.sql
infra/db/: migrate.sh  migrate.sql
infra/mlflow/: Dockerfile
src/: data_bank_marketing.py  db.py  monitor_bank.py  predict.py  predict_bank.py  serve_bank.py  train_bank_marketing.py  train_baseline.py
tests/: conftest.py  test_data_bank_marketing.py  test_db.py  test_monitor_bank.py  test_predict_bank.py  test_train_bank_marketing.py
